Eliminate duplication in ProbNet copy logic, getPotentials variants, and UniformPotential   creation
  4.1 — Extract ProbNetCopier: move auxCopy and deepCopy bodies into a new
        ProbNetCopier class (shallowCopy / deepCopy static methods). ProbNet.copy()
        and ProbNet.deepCopy() now delegate to it. Add package-private
        clearConstraints() to ProbNet. Remove auxCopy from ProbNet.

  4.2 — Add getPotentials(Predicate<Potential>) as the single loop over all
        nodes and constantPotentials. Rewrite getPotentials(), getAdditivePotentials()
        and getPotentialsByRole() as one-liners delegating to it. Remove the
        now-unused NodeTypeDepot.getPotentialsByRole().

  4.3 — Replace the manual variable-list construction and dead double[] table
        in Node.setUniformPotential2Node() with a call to the existing
        PotentialOperations.getUniformPotential(), eliminating the duplication
        with Variable.setUniformPotential().